# spotify-tui

./: ._target  404.html  Cargo.toml  README.md  index.html  print.html  requirements.html  searchindex.js  searchindex.json  spotify_api.html  theory.html
.github/workflows/: cd.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  requirements.md  spotify_api.md  theory.md
src/ui/: mod.rs
