[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
version = "0.1.0"
authors = ["Seb Blanchet <s3blanch@edu.uwaterloo.ca>"]
documentation = "https://github.com/sebastienblanchet/spotify-tui"
repository = "https://github.com/sebastienblanchet/spotify-tui"
keywords = ["spotify", "drums"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10.0"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
dirs = "3.0.1"
clap = "2.33.3"
unicode-width = "0.1.8"
backtrace = "0.3.56"
arboard = "1.1.0"
crossterm = "0.19"
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.3"
anyhow = "1.0.38"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
